--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Bizimle iletişime geçin</a>
                     </li>
+                    <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
                 </ul>
             </div>
         </nav>
