--- a/terms.html
+++ b/terms.html
@@ -44,13 +44,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">Hakkında</a>
+                        <a class="nav-link" href="#about">Hakkında</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#tariffs">Tarifeler</a>
+                        <a class="nav-link" href="#tariffs">Tarifeler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Bizimle iletişime geçin</a>
+                        <a class="nav-link" href="contact.html">Bizimle iletişime geçin</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
@@ -58,35 +58,34 @@
             </div>
         </nav>
     </div>
-    <!-- header section end -->
 </div>
-<!-- contact section start -->
-<div class="contact_section layout_padding">
-    <div class="container">
-        <h1 class="check_text">Bölgenizde hizmetlerimize bağlanma yeteneğini kontrol edin</h1>
-        <div class="contact_section2">
-            <div class="form-contact">
-                <div id="successMessage" class="success_message" style="display: none;">İstek başarıyla gönderildi!</div>
-                <form id="contactForm">
-                    <div class="input_wrapper">
-                        <div class="error_message" id="nameError" style="display: none;">Lütfen adınızı girin.</div>
-                        <input type="text" class="address_text" placeholder="Ad" name="name" required>
-                    </div>
-                    <div class="input_wrapper">
-                        <input type="tel" class="address_text" placeholder="Telefon" name="telephone" required>
-                        <div class="error_message" id="telephoneError" style="display: none;">Lütfen geçerli bir telefon numarası girin.</div>
-                    </div>
-                    <div class="input_wrapper">
-                        <input type="email" class="address_text" placeholder="Email" name="email" required>
-                        <div class="error_message" id="emailError" style="display: none;">Lütfen geçerli bir e-posta adresi girin.</div>
-                    </div>
-                    <button type="submit" class="sub_bt">GÖNDER</button>
-                </form>
-            </div>
-        </div>
+
+<div class="contact_section layout_padding policy">
+    <div class="container legal-content">
+        <h1>Şartları ve Koşulları</h1>
+        <p>GoNet.com Kullanım Şartları ve Koşulları</p>
+        <p>Bu kullanım şartları ve koşulları (“Koşullar”), GoNet.com web sitesini (“Site”) ziyaret eden herkes (“Kullanıcı”) için geçerlidir.</p>
+        <h2>Kabul Edilme</h2>
+        <p>Siteyi ziyaret ederek veya kullanarak, Kullanıcı bu Koşulları kabul etmiş olur. Kullanıcı bu Koşullara uymadığı takdirde Siteyi kullanmamalıdır.</p>
+        <h2>Kullanım Hakları ve Sorumluluklar</h2>
+        <li>a. Kullanıcı, Siteyi yalnızca yasal amaçlar için kullanabilir.</li>
+        <li>b. Kullanıcı, Site üzerinde başkalarının haklarına zarar verecek, huzursuzluk çıkaracak veya yasa dışı faaliyetlerde bulunacak herhangi bir eylemden kaçınmalıdır.</li>
+        <h2>Gizlilik Politikas</h2>
+        <p>Siteye erişim ve kullanım, Kullanıcının gizlilik politikamızı kabul ettiği anlamına gelir. Daha fazla bilgi için lütfen gizlilik politikamızı inceleyiniz.</p>
+        <h2>Telif Hakkı ve İçerik</h2>
+        <li>a. Site üzerindeki tüm içerik ve materyaller telif hakkına tabidir. İzinsiz kullanımı yasaktır.</li>
+        <li>b. Kullanıcılar, Site üzerinde paylaştıkları içeriklerin telif haklarına sahip olduğunu beyan ederler. Site yönetimi, telif hakkı ihlalleri konusunda gereken adımları atma hakkını saklı tutar.</li>
+        <h2>Hizmet Değişiklikleri</h2>
+        <p>Site yönetimi, Siteyi herhangi bir zamanda önceden haber vermeden değiştirme veya sonlandırma hakkını saklı tutar.</p>
+        <h2>Sorumluluk Reddi</h2>
+        <p>Site yönetimi, Site üzerinde sunulan içeriklerin doğruluğu, güncelliği veya eksiksizliği konusunda herhangi bir garanti vermez. Kullanıcılar Siteyi kendi sorumlulukları altında kullanır.</p>
+        <h2>Bağlantılar</h2>
+        <p>Site, diğer web sitelerine bağlantılar içerebilir. Bu bağlantılar yalnızca kullanıcıların kolaylık sağlaması içindir. Bağlantı verilen sitelerin içeriği üzerinde kontrolümüz yoktur ve bu sitelerin içeriği veya kullanımıyla ilgili sorumluluk kabul etmeyiz.</p>
+        <h2>Uygulanabilir Kanunlar</h2>
+        <p>Bu Koşullar ve Site üzerindeki herhangi bir anlaşmazlık, Ukrayna yasalarına tabi olacaktır.</p>
     </div>
 </div>
-<!-- contact section end -->
+
 <!-- footer section start -->
 <div class="footer_section layout_padding">
     <div class="container">
