--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">Hakkında</a>
+                        <a class="nav-link" href="index.html#about">Şirket hakkında</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#tariffs">Tarifeler</a>
@@ -55,6 +55,9 @@
                     <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
                 </ul>
+                <div class="form-inline my-2 my-lg-0">
+                    <a class="btn btn-outline-success my-2 my-sm-0" href="form.html">BAŞLAMAK</a>
+                </div>
             </div>
         </nav>
     </div>
@@ -70,7 +73,7 @@
                 <form id="contactForm">
                     <div class="input_wrapper">
                         <div class="error_message" id="nameError" style="display: none;">Lütfen adınızı girin.</div>
-                        <input type="text" class="address_text" placeholder="Ad" name="name" required>
+                        <input type="text" class="address_text" placeholder="İsim" name="name" required>
                     </div>
                     <div class="input_wrapper">
                         <input type="tel" class="address_text" placeholder="Telefon" name="telephone" required>
