--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <!-- bootstrap css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!-- style css -->
@@ -44,17 +48,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">Hakkında</a>
+                        <a class="nav-link" href="#about">Şirket hakkında</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#tariffs">Tarifeler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Bizimle iletişime geçin</a>
+                        <a class="nav-link" href="#contact">Bizimle iletişime geçin</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
                 </ul>
+                <div class="form-inline my-2 my-lg-0">
+                    <a class="btn btn-outline-success my-2 my-sm-0" href="form.html">BAŞLAMAK</a>
+                </div>
             </div>
         </nav>
     </div>
@@ -91,7 +98,7 @@
                                 <h1 class="internet_text">100 Mbps</h1>
                                 <div class="month_main clearfix">
                                     <h1 class="dolor_text">40 ₼</h1>
-                                    <h2 class="month_text">Ay</h2>
+                                    <h2 class="month_text">Ayda</h2>
                                     <p class="long_text">Oyuncular, sinema tutkunları, iş ve maksimum eğlence için
                                         sınırsız İnternet</p>
                                 </div>
@@ -104,7 +111,7 @@
                                 <h1 class="internet_text">300 Mbps</h1>
                                 <div class="month_main clearfix">
                                     <h1 class="dolor_text">60 ₼</h1>
-                                    <h2 class="month_text">Ay</h2>
+                                    <h2 class="month_text">Ayda</h2>
                                     <p class="long_text">Çocukların, ebeveynlerin ve misafirlerin birçok cihazı bile
                                         İnternet'e maksimum düzeyde sahip olacak</p>
                                 </div>
@@ -117,7 +124,7 @@
                                 <h1 class="internet_text">500 Mbps</h1>
                                 <div class="month_main clearfix">
                                     <h1 class="dolor_text">80 ₼</h1>
-                                    <h2 class="month_text">Ay</h2>
+                                    <h2 class="month_text">Ayda</h2>
                                     <p class="long_text">Bu, yeterli olan modern hız standardıdır</p>
                                 </div>
                                 <div class="seemore_main">
