--- a/policy.html
+++ b/policy.html
@@ -44,13 +44,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">Hakkında</a>
+                        <a class="nav-link" href="index.html#about">Şirket hakkında</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#tariffs">Tarifeler</a>
+                        <a class="nav-link" href="index.html#tariffs">Tarifeler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Bizimle iletişime geçin</a>
+                        <a class="nav-link" href="index.html#contact">Bizimle iletişime geçin</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
@@ -62,95 +62,95 @@
 
 <div class="contact_section layout_padding policy">
     <div class="container">
-    <h1>Gizlilik Politikası</h1>
-    <p>
-        GoNet.com web sitesini ziyaret ettiğiniz için teşekkür ederiz. Bu gizlilik politikası,
-        GoNet.com web sitesi (“Site”) üzerinden toplanan bilgilerin nasıl kullanılacağına ilişkin
-        bilgileri açıklamaktadır. Bu politika, sadece bu web sitesine ve bu web sitesi aracılığıyla toplanan
-        bilgilere uygulanır ve diğer web sitelerine veya kaynaklara yönlendiren bağlantılarla ilgili değildir.</p>
-    <h2>
-        Toplanan Bilgiler:</h2>
-    <p>
-        Ziyaretçilerin, Site’ye erişirken sağladıkları bilgiler: Site’ye erişim sağladığınızda, IP adresiniz gibi
-        standart internet günlük bilgileri, tarayıcı türü, referans/salınımlar ve ziyaret süresi gibi veriler
-        otomatik olarak kaydedilebilir.<br>Kişisel bilgiler: Site üzerinden bir hesap oluşturduğunuzda veya iletişim
-        formunu doldurduğunuzda, adınız, e-posta adresiniz gibi kişisel bilgileri toplayabiliriz.<br>
-    </p>
-    <h2>Kullanım Amaçları:</h2>
-    <p>
-        Toplanan bilgiler, Site’nin işleyişi için kullanılabilir ve Site’nin performansını artırmak, hizmetlerimizi
-        geliştirmek ve kullanıcı deneyimini iyileştirmek için analiz edilebilir.<br>Kişisel bilgiler, size
-        sunduğumuz hizmetlerle ilgili iletişim kurmak, hesabınızı yönetmek, size önemli bilgileri sağlamak ve
-        kullanım koşullarımızı uygulamak gibi amaçlarla kullanılabilir.<br>Çerezler:</p>
-    <p>
-        Site, çerezler gibi teknolojileri kullanarak bilgi toplayabilir. Çerezler, Site’nin kullanımınızı anlamak ve
-        tercihlerinizi hatırlamak için kullanılabilir.<br></p>
-    <h2>Bilgi Paylaşımı:</h2>
-    <p>
-        Kişisel bilgileriniz, yasal gerekliliklerin dışında, üçüncü taraflarla paylaşılmaz veya satılmaz.<br>Ancak,
-        hizmet sağlayıcılarımızla ve iş ortaklarımızla kişisel olmayan bilgileri paylaşabiliriz.<br>Güvenlik:</p>
-    <p>
-        Kişisel bilgilerinizi korumak için makul fiziksel, elektronik ve idari güvenlik önlemleri alıyoruz.<br></p>
-    <h2>Çocukların Gizliliği:</h2>
-    <p>
-        Site, 13 yaşın altındaki çocuklardan bilerek kişisel bilgi toplamaz. Ebeveynlerin veya yasal vasilerin
-        çocuklarının internet kullanımını denetlemeleri önemlidir.<br></p>
-    <h2>Gizlilik Politikasının Değişiklikleri:</h2>
-    <p>
-        Bu gizlilik politikası, değiştirilebilir. Değişiklikler yapılırsa, bu sayfada güncellenmiş bir sürüm
-        yayınlayarak size bildirimde bulunuruz.<br></p>
-    <h2>İletişim:</h2>
-    <p>
-        Gizlilik politikamızla ilgili sorularınız veya endişeleriniz varsa lütfen bizimle iletişime geçin:
-        [info@gonet.com].<br>Bu gizlilik politikasını düzenli olarak gözden geçirmeniz önemlidir, çünkü
-        değişiklikler
-        olabilir. Bu Site’yi kullanarak, bu gizlilik politikasını kabul etmiş sayılırsınız.</p>
-</div>
+        <h1>Gizlilik Politikası</h1>
+        <p>
+            GoNet.com web sitesini ziyaret ettiğiniz için teşekkür ederiz. Bu gizlilik politikası,
+            GoNet.com web sitesi (“Site”) üzerinden toplanan bilgilerin nasıl kullanılacağına ilişkin
+            bilgileri açıklamaktadır. Bu politika, sadece bu web sitesine ve bu web sitesi aracılığıyla toplanan
+            bilgilere uygulanır ve diğer web sitelerine veya kaynaklara yönlendiren bağlantılarla ilgili değildir.</p>
+        <h2>
+            Toplanan Bilgiler:</h2>
+        <p>
+            Ziyaretçilerin, Site’ye erişirken sağladıkları bilgiler: Site’ye erişim sağladığınızda, IP adresiniz gibi
+            standart internet günlük bilgileri, tarayıcı türü, referans/salınımlar ve ziyaret süresi gibi veriler
+            otomatik olarak kaydedilebilir.<br>Kişisel bilgiler: Site üzerinden bir hesap oluşturduğunuzda veya iletişim
+            formunu doldurduğunuzda, adınız, e-posta adresiniz gibi kişisel bilgileri toplayabiliriz.<br>
+        </p>
+        <h2>Kullanım Amaçları:</h2>
+        <p>
+            Toplanan bilgiler, Site’nin işleyişi için kullanılabilir ve Site’nin performansını artırmak, hizmetlerimizi
+            geliştirmek ve kullanıcı deneyimini iyileştirmek için analiz edilebilir.<br>Kişisel bilgiler, size
+            sunduğumuz hizmetlerle ilgili iletişim kurmak, hesabınızı yönetmek, size önemli bilgileri sağlamak ve
+            kullanım koşullarımızı uygulamak gibi amaçlarla kullanılabilir.<br>Çerezler:</p>
+        <p>
+            Site, çerezler gibi teknolojileri kullanarak bilgi toplayabilir. Çerezler, Site’nin kullanımınızı anlamak ve
+            tercihlerinizi hatırlamak için kullanılabilir.<br></p>
+        <h2>Bilgi Paylaşımı:</h2>
+        <p>
+            Kişisel bilgileriniz, yasal gerekliliklerin dışında, üçüncü taraflarla paylaşılmaz veya satılmaz.<br>Ancak,
+            hizmet sağlayıcılarımızla ve iş ortaklarımızla kişisel olmayan bilgileri paylaşabiliriz.<br>Güvenlik:</p>
+        <p>
+            Kişisel bilgilerinizi korumak için makul fiziksel, elektronik ve idari güvenlik önlemleri alıyoruz.<br></p>
+        <h2>Çocukların Gizliliği:</h2>
+        <p>
+            Site, 13 yaşın altındaki çocuklardan bilerek kişisel bilgi toplamaz. Ebeveynlerin veya yasal vasilerin
+            çocuklarının internet kullanımını denetlemeleri önemlidir.<br></p>
+        <h2>Gizlilik Politikasının Değişiklikleri:</h2>
+        <p>
+            Bu gizlilik politikası, değiştirilebilir. Değişiklikler yapılırsa, bu sayfada güncellenmiş bir sürüm
+            yayınlayarak size bildirimde bulunuruz.<br></p>
+        <h2>İletişim:</h2>
+        <p>
+            Gizlilik politikamızla ilgili sorularınız veya endişeleriniz varsa lütfen bizimle iletişime geçin:
+            [info@gonet.com].<br>Bu gizlilik politikasını düzenli olarak gözden geçirmeniz önemlidir, çünkü
+            değişiklikler
+            olabilir. Bu Site’yi kullanarak, bu gizlilik politikasını kabul etmiş sayılırsınız.</p>
+    </div>
 </div>
 
-    <!-- footer section start -->
-    <div class="footer_section layout_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="fooer_logo"><img src="images/logo1.png"></div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <h1 class="customer_text">ADRES</h1>
-                    <p class="footer_lorem_text">45 Uzeyir Hacıbeyov, Bakü, Azerbaycan</p>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <h1 class="customer_text">TELEFON</h1>
-                    <p class="footer_lorem_text">+994125982242</p>
+<!-- footer section start -->
+<div class="footer_section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6">
+                <div class="fooer_logo"><img src="images/logo1.png"></div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h1 class="customer_text">ADRES</h1>
+                <p class="footer_lorem_text">45 Uzeyir Hacıbeyov, Bakü, Azerbaycan</p>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h1 class="customer_text">TELEFON</h1>
+                <p class="footer_lorem_text">+994125982242</p>
 
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <h1 class="customer_text">E-POSTA</h1>
-                    <p class="footer_lorem_text">info@gonet.com</p>
-                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h1 class="customer_text">E-POSTA</h1>
+                <p class="footer_lorem_text">info@gonet.com</p>
             </div>
         </div>
     </div>
-    <!--  footer section end -->
-    <!-- copyright section start -->
-    <div class="copyright_section">
-        <div class="container">
-            <div class="border"></div>
-            <p class="copyright_text">2024 Her hakkı saklıdır.</a></p>
-        </div>
+</div>
+<!--  footer section end -->
+<!-- copyright section start -->
+<div class="copyright_section">
+    <div class="container">
+        <div class="border"></div>
+        <p class="copyright_text">2024 Her hakkı saklıdır.</a></p>
     </div>
-    <!-- copyright section end -->
-    <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
-    <!-- javascript -->
-    <script src="js/owl.carousel.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+</div>
+<!-- copyright section end -->
+<!-- Javascript files-->
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/jquery-3.0.0.min.js"></script>
+<script src="js/plugin.js"></script>
+<!-- sidebar -->
+<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="js/custom.js"></script>
+<!-- javascript -->
+<script src="js/owl.carousel.js"></script>
+<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 </body>
 </html>
