--- a/terms.html
+++ b/terms.html
@@ -44,13 +44,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">Hakkında</a>
+                        <a class="nav-link" href="index.html#about">Şirket hakkında</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#tariffs">Tarifeler</a>
+                        <a class="nav-link" href="index.html#tariffs">Tarifeler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Bizimle iletişime geçin</a>
+                        <a class="nav-link" href="index.html#contact">Bizimle iletişime geçin</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
                     <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
