--- a/form.html
+++ b/form.html
@@ -20,7 +20,10 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
@@ -35,38 +38,18 @@
 <!-- header section start -->
 <div class="header_section">
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-tariff">
             <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">Şirket hakkında</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#tariffs">Tarifeler</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Bizimle iletişime geçin</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
-                    <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
-                </ul>
-                <div class="form-inline my-2 my-lg-0">
-                    <a class="btn btn-outline-success my-2 my-sm-0" href="form.html">BAŞLAMAK</a>
-                </div>
+            <div class="form-inline my-2">
+                <a class="btn btn-outline-success my-2 my-sm-0" href="tariffs.html">BAŞLAMAK</a>
             </div>
         </nav>
     </div>
-    <!-- header section end -->
 </div>
 <!-- contact section start -->
 <div class="contact_section layout_padding">
     <div class="container">
-        <h1 class="check_text">Bölgenizde hizmetlerimize bağlanma yeteneğini kontrol edin</h1>
+        <h1 class="check_text">Bize Ulaşın</h1>
         <div class="contact_section2">
             <div class="form-contact">
                 <div id="successMessage" class="success_message" style="display: none;">İstek başarıyla gönderildi!</div>
@@ -90,30 +73,6 @@
     </div>
 </div>
 <!-- contact section end -->
-<!-- footer section start -->
-<div class="footer_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-sm-6">
-                <div class="fooer_logo"><img src="images/logo1.png"></div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <h1 class="customer_text">ADRES</h1>
-                <p class="footer_lorem_text">45 Uzeyir Hacıbeyov, Bakü, Azerbaycan</p>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <h1 class="customer_text">TELEFON</h1>
-                <p class="footer_lorem_text">+994125982242</p>
-
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <h1 class="customer_text">E-POSTA</h1>
-                <p class="footer_lorem_text">info@gonet.com</p>
-            </div>
-        </div>
-    </div>
-</div>
-<!--  footer section end -->
 <!-- copyright section start -->
 <div class="copyright_section">
     <div class="container">
