--- a/tariffs.html
+++ b/tariffs.html
@@ -20,7 +20,10 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
@@ -35,26 +38,10 @@
 <!-- header section start -->
 <div class="header_section">
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-tariff">
             <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">Şirket hakkında</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#tariffs">Tarifeler</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Bizimle iletişime geçin</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="policy.html">Gizlilik Politikası</a></li>
-                    <li class="nav-item"><a class="nav-link" href="terms.html">Şartları ve Koşulları</a></li>
-                </ul>
+            <div class="form-inline my-2">
+                <a class="btn btn-outline-success my-2 my-sm-0" href="tariffs.html">BAŞLAMAK</a>
             </div>
         </nav>
     </div>
