--- a/tariffs.html
+++ b/tariffs.html
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-tariff">
             <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
             <div class="form-inline my-2">
-                <a class="btn btn-outline-success my-2 my-sm-0" href="tariffs.html">BAŞLAMAK</a>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="form.html">BAŞLAMAK</a>
             </div>
         </nav>
     </div>
@@ -50,10 +50,6 @@
 <div class="product_section layout_padding" id="tariffs">
     <div class="container">
         <h2 class="tariffs_text">Tarifeler</h2>
-        <h1 class="choose_text">Planınızı seçin</h1>
-        <p class="lorem_text1">Gigabit internet sağlayıcımızla planınızı seçin ve 500 Mbps'ye kadar yıldırım hızında
-            hızların keyfini çıkarın. İhtiyaçlarınızı karşılamak üzere tasarlanmış güvenilir, sınırsız veri
-            planlarımızla kesintisiz yayın, oyun ve evden çalışma çözümlerinin keyfini çıkarın.</p>
         <div class="product_section2">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
@@ -98,31 +94,6 @@
         </div>
     </div>
 </div>
-
-    <!-- footer section start -->
-    <div class="footer_section layout_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="fooer_logo"><img src="images/logo1.png"></div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <h1 class="customer_text">ADRES</h1>
-                    <p class="footer_lorem_text">45 Uzeyir Hacıbeyov, Bakü, Azerbaycan</p>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <h1 class="customer_text">TELEFON</h1>
-                    <p class="footer_lorem_text">+994125982242</p>
-
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <h1 class="customer_text">E-POSTA</h1>
-                    <p class="footer_lorem_text">info@gonet.com</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--  footer section end -->
     <!-- copyright section start -->
     <div class="copyright_section">
         <div class="container">
