--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                                 <p class="there_text">Bir gigabit internet sağlayıcısı, evler ve işletmeler için
                                     kesintisiz akış, oyun ve çevrimiçi üretkenlik sağlayarak 500 Mbps'ye kadar ultra
                                     hızlı, güvenilir internet hızları sunar.</p>
-                                <div class="start_bt"><a href="#">Hemen Başlayın</a></div>
-                                <div class="read_bt"><a href="#">Daha Fazlasını Okuyun</a></div>
+                                <div class="start_bt"><a href="form.html">Hemen Başlayın</a></div>
+                                <div class="read_bt"><a href="form.html">Daha Fazlasını Okuyun</a></div>
                             </div>
                             <div class="col-md-6">
                                 <div class="images_1"><img src="images/modem.png"></div>
@@ -154,7 +154,7 @@
                     hızlarda sınırsız tarife planları sunar. Akış, oyun ve uzaktan çalışma için tutarlı ve güvenilir
                     bağlantının keyfini çıkarın ve her zaman sorunsuz bir çevrimiçi deneyim sağlayın.</p>
                 <div class="online_bt_main">
-                    <div class="read_bt1"><a href="#">Daha Fazlasını Oku</a></div>
+                    <div class="read_bt1"><a href="form.html">Daha Fazlasını Oku</a></div>
                 </div>
             </div>
         </div>
