--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>GoNet</title>
+    <title>Lucky</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -40,7 +40,7 @@
 <div class="header_section">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
+            <div class="logo"><a href="index.html"><h1 class="m-0 your_text">LUCKY</h1></a></div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -94,7 +94,7 @@
                     <div class="product_section2">
                         <div class="row">
                             <div class="col-lg-4 col-sm-12">
-                                <h2 class="easy_text">Gümüş</h2>
+                                <h2 class="easy_text">Silver</h2>
                                 <h1 class="internet_text">100 Mbps</h1>
                                 <div class="month_main clearfix">
                                     <h1 class="dolor_text">40 ₼</h1>
@@ -107,7 +107,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-4 col-sm-12">
-                                <h2 class="easy_text">Altın</h2>
+                                <h2 class="easy_text">Gold</h2>
                                 <h1 class="internet_text">300 Mbps</h1>
                                 <div class="month_main clearfix">
                                     <h1 class="dolor_text">60 ₼</h1>
@@ -263,7 +263,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-sm-6">
-                <div class="fooer_logo"><img src="images/logo1.png"></div>
+                <div class="fooer_logo"><h1 class="m-0 your_text">LUCKY</h1></div>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <h1 class="customer_text">ADRES</h1>
