--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>GoNet</title>
+    <title>Lucky</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -39,7 +39,7 @@
 <div class="header_section">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-tariff">
-            <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
+            <div class="logo"><a href="index.html"><h1 class="m-0 your_text">LUCKY</h1></a></div>
             <div class="form-inline my-2">
                 <a class="btn btn-outline-success my-2 my-sm-0" href="tariffs.html">BAŞLAMAK</a>
             </div>
