--- a/tariffs.html
+++ b/tariffs.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>GoNet</title>
+    <title>Lucky</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -39,7 +39,7 @@
 <div class="header_section">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-tariff">
-            <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
+            <div class="logo"><a href="index.html"><h1 class="m-0 your_text">LUCKY CASINO</h1></a></div>
             <div class="form-inline my-2">
                 <a class="btn btn-outline-success my-2 my-sm-0" href="form.html">BAŞLAMAK</a>
             </div>
@@ -49,11 +49,11 @@
 
 <div class="product_section layout_padding" id="tariffs">
     <div class="container">
-        <h2 class="tariffs_text">Tarifeler</h2>
+        <h2 class="tariffs_text">Koşullar</h2>
         <div class="product_section2">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">Gümüş</h2>
+                    <h2 class="easy_text">Silver</h2>
                     <h1 class="internet_text">100 Mbps</h1>
                     <div class="month_main clearfix">
                         <h1 class="dolor_text">40 ₼</h1>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">Altın</h2>
+                    <h2 class="easy_text">Gold</h2>
                     <h1 class="internet_text">300 Mbps</h1>
                     <div class="month_main clearfix">
                         <h1 class="dolor_text">60 ₼</h1>
