--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         sınırsız İnternet</p>
                                 </div>
                                 <div class="seemore_main">
-                                    <div class="see_more"><a href="tariffs.html">DAHA FAZLASINI GÖR</a></div>
+                                    <div class="see_more"><a href="tariffs.html">Bağlamak</a></div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-sm-12">
@@ -116,7 +116,7 @@
                                         İnternet'e maksimum düzeyde sahip olacak</p>
                                 </div>
                                 <div class="seemore_main">
-                                    <div class="see_more"><a href="tariffs.html">DAHA FAZLASINI GÖR</a></div>
+                                    <div class="see_more"><a href="tariffs.html">Bağlamak</a></div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-sm-12">
@@ -128,7 +128,7 @@
                                     <p class="long_text">Bu, yeterli olan modern hız standardıdır</p>
                                 </div>
                                 <div class="seemore_main">
-                                    <div class="see_more"><a href="tariffs.html">DAHA FAZLASINI GÖR</a></div>
+                                    <div class="see_more"><a href="tariffs.html">Bağlamak</a></div>
                                 </div>
                             </div>
                         </div>
