--- a/tariffs.html
+++ b/tariffs.html
@@ -48,44 +48,89 @@
     </div>
 </div>
 
+<!--<div class="product_section" id="tariffs">-->
+<!--    <div class="container">-->
+<!--        <h2 class="tariffs_text mt-tariff">Koşullar</h2>-->
+<!--        <div class="product_section2 pt-0">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-4 col-sm-12">-->
+<!--                    <h2 class="easy_text">Silver</h2>-->
+<!--                    <h1 class="internet_text">100 Mbps</h1>-->
+<!--                    <div class="month_main clearfix">-->
+<!--                        <h1 class="dolor_text">40 ₼</h1>-->
+<!--                        <h2 class="month_text">Ayda</h2>-->
+<!--                        <p class="long_text">Oyuncular, sinema tutkunları, iş ve maksimum eğlence için sınırsız-->
+<!--                            İnternet</p>-->
+<!--                    </div>-->
+<!--                    <div class="seemore_main">-->
+<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-12">-->
+<!--                    <h2 class="easy_text">Gold</h2>-->
+<!--                    <h1 class="internet_text">300 Mbps</h1>-->
+<!--                    <div class="month_main clearfix">-->
+<!--                        <h1 class="dolor_text">60 ₼</h1>-->
+<!--                        <h2 class="month_text">Ayda</h2>-->
+<!--                        <p class="long_text">Çocukların, ebeveynlerin ve misafirlerin birçok cihazı bile İnternet'e-->
+<!--                            maksimum düzeyde sahip olacak</p>-->
+<!--                    </div>-->
+<!--                    <div class="seemore_main">-->
+<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-12">-->
+<!--                    <h2 class="easy_text">Premium</h2>-->
+<!--                    <h1 class="internet_text">500 Mbps</h1>-->
+<!--                    <div class="month_main clearfix">-->
+<!--                        <h1 class="dolor_text">80 ₼</h1>-->
+<!--                        <h2 class="month_text">Ayda</h2>-->
+<!--                        <p class="long_text">Bu, yeterli olan modern hız standardıdır</p>-->
+<!--                    </div>-->
+<!--                    <div class="seemore_main">-->
+<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="product_section" id="tariffs">
     <div class="container">
-        <h2 class="tariffs_text">Koşullar</h2>
+        <h2 class="tariffs_text mt-tariff">Koşullar</h2>
         <div class="product_section2 pt-0">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">Silver</h2>
-                    <h1 class="internet_text">100 Mbps</h1>
+                    <h2 class="easy_text">OLYMP CASINO</h2>
+                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>
                     <div class="month_main clearfix">
-                        <h1 class="dolor_text">40 ₼</h1>
-                        <h2 class="month_text">Ayda</h2>
-                        <p class="long_text">Oyuncular, sinema tutkunları, iş ve maksimum eğlence için sınırsız
-                            İnternet</p>
+                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>
+                        <h2 class="month_text">Типы подключения</h2>
+                        <p class="long_text">Android/App Store</p>
                     </div>
                     <div class="seemore_main">
                         <div class="see_more"><a href="form.html">Bağlamak</a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">Gold</h2>
-                    <h1 class="internet_text">300 Mbps</h1>
+                    <h2 class="easy_text">OLYMP CASINO</h2>
+                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>
                     <div class="month_main clearfix">
-                        <h1 class="dolor_text">60 ₼</h1>
-                        <h2 class="month_text">Ayda</h2>
-                        <p class="long_text">Çocukların, ebeveynlerin ve misafirlerin birçok cihazı bile İnternet'e
-                            maksimum düzeyde sahip olacak</p>
+                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>
+                        <h2 class="month_text">Типы подключения</h2>
+                        <p class="long_text">Android/App Store</p>
                     </div>
                     <div class="seemore_main">
                         <div class="see_more"><a href="form.html">Bağlamak</a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">Premium</h2>
-                    <h1 class="internet_text">500 Mbps</h1>
+                    <h2 class="easy_text">OLYMP CASINO</h2>
+                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>
                     <div class="month_main clearfix">
-                        <h1 class="dolor_text">80 ₼</h1>
-                        <h2 class="month_text">Ayda</h2>
-                        <p class="long_text">Bu, yeterli olan modern hız standardıdır</p>
+                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>
+                        <h2 class="month_text">Типы подключения</h2>
+                        <p class="long_text">Android/App Store</p>
                     </div>
                     <div class="seemore_main">
                         <div class="see_more"><a href="form.html">Bağlamak</a></div>
@@ -95,98 +140,6 @@
         </div>
     </div>
 </div>
-<!--<div class="product_section" id="tariffs">-->
-<!--    <div class="container">-->
-<!--        <h2 class="tariffs_text">Koşullar</h2>-->
-<!--        <div class="product_section2 pt-0">-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <h2 class="easy_text">OLYMP CASINO</h2>-->
-<!--                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>-->
-<!--                    <div class="month_main clearfix">-->
-<!--                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>-->
-<!--                        <h2 class="month_text">Типы подключения</h2>-->
-<!--                        <p class="long_text">Android/App Store</p>-->
-<!--                    </div>-->
-<!--                    <div class="seemore_main">-->
-<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <h2 class="easy_text">OLYMP CASINO</h2>-->
-<!--                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>-->
-<!--                    <div class="month_main clearfix">-->
-<!--                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>-->
-<!--                        <h2 class="month_text">Типы подключения</h2>-->
-<!--                        <p class="long_text">Android/App Store</p>-->
-<!--                    </div>-->
-<!--                    <div class="seemore_main">-->
-<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <h2 class="easy_text">OLYMP CASINO</h2>-->
-<!--                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>-->
-<!--                    <div class="month_main clearfix">-->
-<!--                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>-->
-<!--                        <h2 class="month_text">Типы подключения</h2>-->
-<!--                        <p class="long_text">Android/App Store</p>-->
-<!--                    </div>-->
-<!--                    <div class="seemore_main">-->
-<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="product_section layout_padding" id="tariffs">-->
-<!--    <div class="container">-->
-<!--        <h2 class="tariffs_text">Tarifeler</h2>-->
-<!--        <h1 class="choose_text">Planınızı seçin</h1>-->
-<!--        <p class="lorem_text1">Gigabit internet sağlayıcımızla planınızı seçin ve 500 Mbps'ye kadar yıldırım hızında-->
-<!--            hızların keyfini çıkarın. İhtiyaçlarınızı karşılamak üzere tasarlanmış güvenilir, sınırsız veri-->
-<!--            planlarımızla kesintisiz yayın, oyun ve evden çalışma çözümlerinin keyfini çıkarın.</p>-->
-<!--        <div class="product_section2">-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <div class="box_main">-->
-<!--                        <div class="internet_icon"></div>-->
-<!--                        <h4 class="broadband_text">İnternet</h4>-->
-<!--                        <p class="many_text">Hiçbir zaman çok fazla İnternet yoktur!-->
-<!--                            Özellikle bir dizüstü bilgisayarınız, PC'niz, 2-3 akıllı telefonunuz, bir tabletiniz veya-->
-<!--                            hatta bağlı bir "Akıllı Ev"iniz varsa.-->
-<!--                            IT-TV'den gelen "ışık olmadan" bile çalışan yüksek hızlı İnternet'e bağlanın ve mükemmel bir-->
-<!--                            bağlantının tüm avantajlarından yararlanın!-->
-<!--                        </p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <div class="box_main active">-->
-<!--                        <div class="internet_icon1"></div>-->
-<!--                        <h4 class="broadband_text active">İnternet + TV</h4>-->
-<!--                        <p class="many_text active">"İnternet+TV"yi bağlayın ve dairedeki tüm TV'lerin bağlantısını,-->
-<!--                            yüksek hızlı İnternet'i elde edin-->
-<!--                            Ayrıca bir bonus - tüm Android ve iOS cihazlar için 140'tan fazla IPTV kanalı!-->
-<!--                            Bunu hızlı bir şekilde yapıyoruz, bizi arayın!-->
-<!--                        </p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <div class="box_main">-->
-<!--                        <div class="internet_icon2"></div>-->
-<!--                        <h4 class="broadband_text">Televizyon</h4>-->
-<!--                        <p class="many_text">Birlikte - daha karlı!-->
-<!--                            Tek bir fiş ve ayrıca birkaç hizmet için özel bir tarife, daha fazla tasarruf edin :)-->
-<!--                            Ayrıca, tüm hizmetler tek bir kişisel hesapta.-->
-<!--                            ITTV sizin için çok uygun!-->
-<!--                        </p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
     <!-- copyright section start -->
     <div class="copyright_section">
         <div class="container">
